<resources>
    <string name="OnClickHome">OnClickHomeHandler</string>
    <string name="cdesc_nnm_icon">icon</string>
    <string name="cdesc_nnm_name">name</string>
    <string name="cdesc_nnm_home">home</string>
    <string name="nnm_site">www.nnm-club.ru</string>
    <string name="c_softwarrior">(c) Softwarrior</string>
    <string name="app_name">NoNaMe Club Downloader</string>
    <string name="app_desc">The program to search and download content from nnm-club.ru</string>
    <string name="app_copyright">(c) Softwarrior</string>
    <string name="on_click_main_button_download">OnClickMainButtonDownload</string>
    <string name="on_click_main_button_websearch">OnClickMainButtonWebSearch</string>
    <string name="on_click_main_button_rsssearch">OnClickMainButtonRSSSearch</string>
    <string name="on_click_main_button_piratesearch">OnClickMainButtonPirateSearch</string>
    <string name="on_click_main_button_kinoafisha">OnClickMainButtonKinoafisha</string>
    <string name="on_click_main_button_settings">OnClickMainButtonSettings</string>
    <string name="on_click_main_button_programs">OnClickMainButtonPrograms</string>
    <string name="on_click_main_button_prog1">OnClickMainButtonProg1</string>
    <string name="on_click_main_button_prog2">OnClickMainButtonProg2</string>
    <string name="main_button_piratesearch">Pirate search</string>
    <string name="main_button_programs">Programs</string>
    <string name="main_button_prog1">Kings and emperors of Russia\n - the chronology of the Board</string>
    <string name="main_button_prog2">Adult Video</string>
    <string name="main_button_install">Install</string>
    <string name="main_text_desc">We represent your attention of other products Softwarrior:</string>
    <string name="press_back_to_exit">Press back to exit from programm</string>
    <string name="web_search_instruction">Instructions:\n
1) Select a site\n
2) Login to the site\n
3) Fill in the search field\n
4) Search or see site map
</string>
    <string name="rss_search_instruction">Instructions:\n
RSS is only for rutracker.org\n
1) Login to the site\n
2) Specify the search criteria\n
3) Provide year and title\n
4) Search the torrent
</string>
    <string name="pirate_search_instruction">Instructions:\n
1) Select site\n
2) Select sort order (optional)\n 
3) Enter the name in English\n
4) Search torrents
</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_main">Main</string>
    <string name="menu_file_manager">File Manager</string>
    <string name="preferences_select_content_title">SELECT CONTENT</string>
    <string name="preferences_video_title">FILMS, VIDEO, TV</string>
    <string name="preferences_video_foreign_films_title">Foreign Films</string>
    <string name="preferences_video_russian_films_title">Russian Films</string>
    <string name="preferences_video_authors_films_title">Authors Films</string>
    <string name="preferences_video_theatre_title">Theatre</string>
    <string name="preferences_video_animations_title">Animations</string>
    <string name="preferences_video_animation_serials_title">Animation serials</string>
    <string name="preferences_video_anime_title">Anime</string>
    <string name="preferences_serials_title">SERIALS</string>
    <string name="preferences_serials_foreign_title">Foreign serials</string>
    <string name="preferences_serials_russian_title">Russian serials</string>
    <string name="preferences_audiobooks_title">AUDIOBOOKS</string>
    <string name="preferences_audiobooks_audiobooks_title">Audiobooks</string>
    <string name="preferences_music_title">MUSIC</string>
    <string name="preferences_music_classic_title">Classic music</string>
    <string name="preferences_music_pope_dance_title">Pope, disco, dance music</string>
    <string name="preferences_search_title">SEARCH PARAMETERS</string>
    <string name="preferences_search_year_title">SEARCH YEAR</string>
    <string name="preferences_search_name_title">SEARCH NAME</string>
    <string name="preferences_search_string_title">SEARCH STRING</string>
    <string name="preferences_download_options_title">DOWNLOAD OPTIONS</string>
    <string name="preferences_session_options_title">SESSION OPTIONS</string>
    <string name="preferences_session_options_cat_title">SESSION OPTIONS</string>
    <string name="preferences_listen_port">Listen port</string>
    <string name="preferences_upload_limit">Upload limit(byte/sec)</string>
    <string name="preferences_download_limit">Download limit(byte/sec)</string>
    <string name="preferences_proxy_options_title">PROXY OPTIONS</string>
    <string name="preferences_proxy_options_cat_title">PROXY OPTIONS</string>
    <string name="preferences_proxy_type">Proxy Type</string>
    <string name="preferences_host_name">Host name</string>
    <string name="preferences_port_number">Port number</string>
    <string name="preferences_user_name">User name</string>
    <string name="preferences_password">Password</string>
    <string name="preferences_torrent_options_title">TORRENT OPTIONS</string>
    <string name="preferences_torrent_options_cat_title">TORRENT OPTIONS</string>
    <string name="preferences_torrent_file_name">Torrent file name</string>
    <string name="preferences_torrent_save_path">Torrent save path</string>
    <string name="preferences_proxy_type_dialog_title">Select proxy type</string>
    <string name="preferences_site_name_dialog_title">Select site</string>
    <string name="on_click_button_search">OnClickButtonSearch</string>
    <string name="on_click_button_login">OnClickButtonLogin</string>
    <string name="on_click_button_refresh_page">OnClickButtonRefreshPage</string>
    <string name="on_click_button_finish_login">OnClickButtonFinishLogin</string>
    <string name="on_click_button_download">OnClickButtonDownload</string>
    <string name="on_click_button_start_download">OnClickButtonStartDownload</string>
    <string name="on_click_button_stop_download">OnClickButtonStopDownload</string>
    <string name="on_click_button_pause_download">OnClickButtonPauseDownload</string>
    <string name="on_click_button_resume_download">OnClickButtonResumeDownload</string>
    <string name="on_click_activate_settings">OnClickButtonActivateSettings</string>
    <string name="on_click_button_downloaded">OnClickButtonDownloader</string>
    <string name="on_click_refresh_advertising">OnClickButtonRefreshAdvertising</string>
    <string name="on_click_button_site_map">OnClickButtonSiteMap</string>
    <string name="on_click_adview">OnClickAdview</string>
    <string name="button_site_map">Site map</string>
    <string name="button_refresh_advertising">Refresh Advertising</string>
    <string name="button_download">Download torrent</string>
    <string name="button_search">Search</string>
    <string name="button_login">Login</string>
    <string name="button_refresh_page">Refresh page</string>
    <string name="button_finish_login">Back to search</string>
    <string name="button_start_download">Start Download</string>
    <string name="button_stop_download">Stop Download</string>
    <string name="button_pause_download">Pause Download</string>
    <string name="button_resume_download">Resume Download</string>
    <string name="button_activate_settings">Activate Settings</string>
    <string name="button_downloaded">To Download</string>
    <string name="summary_chechbox_enable">Enable this setting</string>
    <string name="summary_chechbox_disable">Disable this setting</string>
    <string name="summary_edittext_current">Current value is</string>
    <string name="summary_edittext_current_zerro">(0 means undefined)\nCurrent value is</string>
    <string name="summary_preferences_proxy_type">Select proxy type</string>
    <string name="summary_preferences_site_name">Active site</string>
    <string name="tab_web_search">Web Search</string>
    <string name="tab_rss_search">RSS Search</string>
    <string name="tab_download">Download</string>
    <string name="tab_advertising">Advertising</string>
    <string name="service_disconnected">Torrent Downloader Service disconnected</string>
    <string name="service_connected">Torrent Downloader Service connected</string>
    <string name="service_controller">Torrent Downloader Service controller</string>
    <string name="service_created">Click to open Torrent Manager</string>
    <string name="service_destroyed">Torrent Downloader Service stopped</string>
    <string name="service_label">Torrent Downloader Service</string>
    <string name="service_notification">Start Download Service</string>
    <string name="activity_service_controller">Torrent Downloader Service Controller</string>
    <string name="text_torrent_state">Torrent state:</string>
    <string name="text_torrent_state_undefined">undefined</string>
    <string name="text_common_status">Torrent and Session status</string>
    <string name="text_torrent_state_queued_for_checking">queued for checking</string>
    <string name="text_torrent_state_checking_files">checking files</string>
    <string name="text_torrent_state_downloading_metadata">downloading metadata</string>
    <string name="text_torrent_state_downloading">downloading</string>
    <string name="text_torrent_state_finished">finished</string>
    <string name="text_torrent_state_seeding">seeding</string>
    <string name="text_torrent_state_allocating">allocating</string>
    <string name="text_torrent_state_checking_resume_data">checking resume data</string>
    <string name="text_torrent_state_paused">paused</string>
    <string name="text_torrent_state_queued">queued</string>
    <string name="text_download_started">Download Started</string>
    <string name="text_download_stopped">Download Stopped</string>
    <string name="text_download_paused">Download Paused</string>
    <string name="help_activity_name">Help</string>
    <string name="button_home">Home</string>
    <string name="on_click_button_home">OnClickButtonHome</string>
    <string name="button_sdcard">SD card</string>
    <string name="on_click_button_sdcard">OnClickButtonSDCard</string>
    <string name="button_back_to_downloader">Downloader</string>
    <string name="on_click_back_to_downloader">OnClickButtonBackToDownloader</string>
    <string name="button_select_current_dir">Select dir</string>
    <string name="on_click_select_current_dir">OnClickButtonSelectCurrentDir</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="file_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="file_deleted">File deleted.</string>
    <string name="folder_deleted">Folder deleted.</string>
    <string name="file_renamed">File renamed.</string>
    <string name="folder_renamed">Folder renamed.</string>
    <string name="button_select_files">Files</string>
    <string name="on_click_button_select_files">OnClickButtonSelectFiles</string>
    <string name="on_click_button_storage_mode">OnClickButtonStorageMode</string>
    <string name="button_storage_mode">Allocate storage for files</string>
    <string name="main_button_download">DOWNLOAD \u0020</string>
    <string name="main_button_websearch">WEB SEARCH</string>
    <string name="main_button_rsssearch">RSS SEARCH</string>
    <string name="main_button_kinoafisha">KINOAFISHA</string>
    <string name="main_button_settings">\u0020 SETTINGS \u0020</string>
</resources>