<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ButtonsLayout" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true" 
        android:orientation="vertical" 
        android:layout_width="fill_parent" android:paddingBottom="5dp">
        <com.google.ads.AdView 
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adUnitId="a14d5a500187b19"
            ads:adSize="BANNER"/>
        <com.mobclix.android.sdk.MobclixMMABannerXLAdView 
            android:id="@+id/advertising_banner_view"
            android:layout_height="50dp"
            android:layout_width="320dp"/>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"    
            android:layout_width="fill_parent"
            android:id="@+id/ButtonsLayout1" 
            android:orientation="horizontal" 
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true">
            <CheckBox
                android:id="@+id/ButtonStorageMode"
                android:text="@string/button_storage_mode"
                android:textColor="@color/cyan" 
                android:onClick="@string/on_click_button_storage_mode"
                android:layout_alignTop="@+id/ButtonTorrentManager"
                android:layout_alignBottom="@+id/ButtonTorrentManager"
                android:layout_alignParentRight="true" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent" android:button="@drawable/ic_checkbox_indicator"/>                               
                <requestFocus />
         </RelativeLayout>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"    
            android:layout_width="fill_parent"
            android:id="@+id/ButtonsLayout2" 
            android:orientation="horizontal" 
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true"> 
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:id="@+id/TextView1" 
                android:text="" 
                android:layout_centerHorizontal="true" 
                android:layout_centerVertical="true"/>       
            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/ButtonStopDownload"
                android:onClick="@string/on_click_button_stop_download"
                android:text="@string/button_stop_download" 
                android:layout_alignParentRight="true" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent" 
                android:background="@drawable/button_red"
                android:textStyle="bold"
                android:textColor="@color/cyan"                                                 
                android:layout_toRightOf="@id/TextView1"/>
                <requestFocus />
            <Button 
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/ButtonStartDownload"
                android:onClick="@string/on_click_button_start_download" 
                android:text="@string/button_start_download" 
                android:layout_height="wrap_content"  
                android:layout_alignParentLeft="true" 
                android:layout_width="fill_parent"
                android:background="@drawable/button_red"
                android:textStyle="bold"
                android:textColor="@color/cyan"                                                                 
                android:layout_toLeftOf="@id/TextView1"/>  
         </RelativeLayout>
        <RelativeLayout    
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/ButtonsLayout3" 
            android:orientation="horizontal" 
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true"> 
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:id="@+id/TextView2" 
                android:text="" 
                android:layout_centerHorizontal="true" 
                android:layout_centerVertical="true"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/ButtonPauseDownload"
                android:onClick="@string/on_click_button_pause_download"
                android:text="@string/button_pause_download"  
                android:layout_alignParentRight="true" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent"
                android:background="@drawable/button_green"
                android:textStyle="bold"
                android:textColor="@color/cyan"                                                                 
                android:layout_toRightOf="@id/TextView2"/>
                <requestFocus />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/ButtonResumeDownload" 
                android:onClick="@string/on_click_button_resume_download"
                android:text="@string/button_resume_download"           
                android:layout_height="wrap_content"  
                android:layout_alignParentLeft="true" 
                android:layout_width="fill_parent"
                android:background="@drawable/button_green"
                android:textStyle="bold"
                android:textColor="@color/cyan"                                                                 
                android:layout_toLeftOf="@id/TextView2"/>  
         </RelativeLayout>
    </LinearLayout>
    <RelativeLayout    
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ProgressBarLayout" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ButtonsLayout">
        <TextView
            android:layout_alignParentTop="true" 
            android:text="@string/text_torrent_state"
            android:textColor="@color/green"
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:id="@+id/TextViewTorrentStateLabel"/>
        <TextView
            android:layout_toRightOf="@+id/TextViewTorrentStateLabel"
            android:text="@string/text_torrent_state_undefined"
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:textColor="@color/cyan"
            android:id="@+id/TextViewTorrentState" 
            android:layout_alignTop="@+id/TextViewTorrentStateLabel" 
            android:layout_alignBottom="@+id/TextViewTorrentStateLabel"/>
        <com.softwarrior.widgets.TextProgressBar
            android:id="@+id/progress_horizontal"
            android:layout_below="@id/TextViewTorrentState"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="1000"
            android:progress="0"/>
        <ScrollView
            android:layout_below="@+id/progress_horizontal"
            android:layout_alignLeft="@+id/progress_horizontal"                      
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
	        <TextView
	            android:layout_height="wrap_content" 
	            android:layout_width="wrap_content"
	            android:textColor="@color/solid_yellow" 
	            android:text="@string/text_common_status" 
	            android:id="@+id/TextViewCommonStatus" 
	            android:textSize="10dp"/>
        </ScrollView>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:layout_below="@+id/progress_horizontal"
            android:onClick="@string/on_click_button_select_files" 
            android:text="@string/button_select_files" 
            android:id="@+id/ButtonSelectFiles" 
            android:background="@drawable/button_blue"
            android:textStyle="bold"
            android:textColor="@color/cyan"                                                                             
            android:layout_alignParentRight="true"/>        
    </RelativeLayout>   
</RelativeLayout>
