<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <TextView 
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" 
       android:id="@+id/TextViewInstruction" 
       android:text="@string/rss_search_instruction"
       android:paddingTop="5sp"
       android:paddingBottom="5sp"
       android:textColor="@color/cyan"/>                    
    <LinearLayout    
        android:id="@+id/ButtonsLayoutMain" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true" 
        android:orientation="vertical" 
        android:layout_width="fill_parent" android:paddingBottom="5dp"> 
        <RelativeLayout 
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/ButtonsLayout" 
            android:orientation="horizontal" 
            android:layout_height="wrap_content"> 
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:id="@+id/TextView" 
                android:text="" 
                android:layout_centerHorizontal="true" 
                android:layout_centerVertical="true"/>       
            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/button_search"
                android:onClick="@string/on_click_button_search"
                android:id="@+id/ButtonSearch"
                android:layout_alignParentRight="true" 
                android:layout_height="wrap_content" 
                android:layout_width="fill_parent"
                android:textStyle="bold"
                android:textColor="@color/cyan"
                android:background="@drawable/button_nnm_light"                  
                android:layout_toRightOf="@id/TextView"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/button_login"
                android:onClick="@string/on_click_button_login"
                android:layout_height="wrap_content" 
                android:id="@+id/ButtonLogin" 
                android:layout_alignParentLeft="true" 
                android:layout_width="fill_parent"
                android:textStyle="bold"
                android:textColor="@color/cyan"
                android:background="@drawable/button_nnm_light"                
                android:layout_toLeftOf="@id/TextView"/>  
        </RelativeLayout>
    </LinearLayout>              
    <ListView android:id="@android:id/list"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_below="@id/TextViewInstruction"
              android:layout_above="@id/ButtonsLayoutMain"/>
</RelativeLayout>